# app/Http/Controllers/NotificationController.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Notification;
+use Illuminate\Http\JsonResponse;
+use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+
+class NotificationController extends Controller
+{
+    use AuthorizesRequests;
+
+    public function index(): JsonResponse
+    {
+        return response()->json(Notification::all()->flatten());
+    }
+
+    public function destroy(Notification $notification): JsonResponse
+    {
+        $this->authorize('delete', $notification);
+
+        $notification->delete();
+
+        return response()->json('', Response::HTTP_NO_CONTENT);
+    }
+}
